--- a/report_data_semantics/capitolo1.tex
+++ b/report_data_semantics/capitolo1.tex
@@ -265,7 +265,7 @@ Some features showed a heavy right-skewed distribution, with typical traits of P
         \caption{KDE of right-skewed attributes with log density}
         \label{fig:sub2_KDE_left_skew}
     \end{subfigure}
-    \caption{Kernel Density Estimation of the left-skewed attributes}
+    \caption{Kernel Density Estimation of the right-skewed attributes}
     \label{fig:left_skewed}
 \end{figure}
 
