--- a/code/multivariate_regression.ipynb
+++ b/code/multivariate_regression.ipynb
@@ -102,13 +102,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": null,
    "id": "a88ca872",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
+    "import numpy as np\n",
     "\n",
     "def train_and_evaluate_model(ModelClass, X_train, y_train, X_test, y_test, params_distribution=None, **model_params):\n",
     "    \"\"\"\n",
@@ -152,8 +153,8 @@
     "        'train': {\n",
     "            'per_feature': {\n",
     "                feature: {\n",
-    "                    'mae': mean_absolute_error(y_train.iloc[:, i], y_train_pred[:, i]),\n",
-    "                    'mse': mean_squared_error(y_train.iloc[:, i], y_train_pred[:, i]),\n",
+    "                    'mae': mean_absolute_error(y_train.iloc[:, i], y_train_pred[:, i]) / (np.max(y_train.iloc[:, i]) - np.min(y_train.iloc[:, i])),\n",
+    "                    'mse': mean_squared_error(y_train.iloc[:, i], y_train_pred[:, i]) / (np.max(y_train.iloc[:, i]) - np.min(y_train.iloc[:, i])),\n",
     "                    'r2': r2_score(y_train.iloc[:, i], y_train_pred[:, i])\n",
     "                } for i, feature in enumerate(targets)\n",
     "            },\n",
